--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <h3>This is text for a div element</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3 style="background-color: green;">This is text for a div element</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3 style="background-color: green;">This is text for a div element</h3>
       </div>
       <div class="element">
-        <h3>This is text for a div element</h3>
+        <h3 style="background-color: green;">This is text for a div element</h3>
       </div>
     </section>
   </body>
