css-exercise-one V2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="~/Documents/GitHub/css-exercise-one/css/reset200802.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <nav>
@@ -28,14 +29,14 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
-        <h3 style="background-color: green;">This is text for a div element</h3>
+      <div class="new-element">
+        <h3>This is text for a div new-element</h3>
       </div>
-      <div class="element">
-        <h3 style="background-color: green;">This is text for a div element</h3>
+      <div class="new-element">
+        <h3>This is text for a div new-element</h3>
       </div>
-      <div class="element">
-        <h3 style="background-color: green;">This is text for a div element</h3>
+      <div class="new-element">
+        <h3>This is text for a div new-element</h3>
       </div>
     </section>
   </body>
