css-exercise-one V3

--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="new-element">
-        <h3>This is text for a div new-element</h3>
-      </div>
-      <div class="new-element">
-        <h3>This is text for a div new-element</h3>
-      </div>
-      <div class="new-element">
-        <h3>This is text for a div new-element</h3>
+
+      <div class="new-element-one new-element-two new-element-three">
+        <h3>This is text for a div new-element-one</h3>
+        <h3>This is text for a div new-element-two</h3>
+        <h3>This is text for a div new-element-three</h3>
       </div>
     </section>
   </body>
